Integration server security improvements (antispam filter, user agent checks, etc). Read FAQ (Integration server parameters) for more details.

--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Etherlinker.EtherlinkerSettings]
 IntegrationServerURL="https://localhost:8451"
 RunIntegrationServerSilently=False
-InfuraURL=ADD INFURA URL HERE
+InfuraURL="https://rinkeby.infura.io"
 IntegrationServerSourceDirectory=D:\[Work]\Etherlinker\EtherlinkerServer\Stratum
 ContractsToCompileDirectory=D:\[Work]\ContractsToCompile
 
