--- a/EtherlinkerServer/Stratum/src/main/resources/application.properties
+++ b/EtherlinkerServer/Stratum/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.thymeleaf.cache = false
 
+etherlinker.is.local.server = false
+etherlinker.antispam.filter.active = true
+etherlinker.antispam.filter.unblock.interval = 5000
+etherlinker.antispam.filter.block.interval = 200
+etherlinker.check.ue4.agent = false
+
 server.port = 8451
 server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = 123456
