Batch operations support

--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -70,8 +70,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 IntegrationServerURL="https://localhost:8451"
 RunIntegrationServerSilently=False
 InfuraURL="https://rinkeby.infura.io"
-IntegrationServerSourceDirectory=D:\[Work]\Etherlinker\EtherlinkerServer\Stratum
-ContractsToCompileDirectory=D:\[Work]\ContractsToCompile
+IntegrationServerSourceDirectory=G:\[Work]\Etherlinker for UE4\EtherlinkerServer\Stratum
+ContractsToCompileDirectory=G:\[Work]\ContractsToCompile
 
 [/Script/NavigationSystem.NavigationSystemV1]
 CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
@@ -134,5 +134,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
