Started to work on Android support.

--- a/EtherlinkerExampleProject/Config/DefaultGame.ini
+++ b/EtherlinkerExampleProject/Config/DefaultGame.ini
@@ -32,13 +32,13 @@ IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=False
 bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=False
+IncludeCrashReporter=True
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=True
-bCompressed=False
+bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
@@ -47,3 +47,4 @@ bSkipMovies=False
 +DirectoriesToAlwaysStageAsNonUFS=(Path="IntegrationServer")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
