Continue improving Android support

--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -165,6 +165,11 @@ KeyStore=EtherlinkerKey.keystore
 KeyAlias=EtherlinkerKey
 KeyStorePassword=123456
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=Horizontal
+UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000,Keys=((ArriveTangent=0.000797),(Time=1280.000000,Value=0.700000),(Time=1920.000000,Value=1.000000),(Time=2560.000000,Value=1.000000),(Time=3840.000000,Value=2.000000))),ExternalCurve=CurveFloat'"/Game/EtherlinkerExampleProject/Blueprints/UI/Widgets/UI_ScalingCurve.UI_ScalingCurve"')
+ApplicationScale=1.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
