--- a/EtherlinkerExampleProject/Config/DefaultInput.ini
+++ b/EtherlinkerExampleProject/Config/DefaultInput.ini
@@ -67,6 +67,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ERC20TokenAdminMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="ERC721TokenUserMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +ActionMappings=(ActionName="ERC721TokenAdminMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
++ActionMappings=(ActionName="ToggleMobileMenuSelector",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
