--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -15,7 +15,16 @@ GlobalDefaultServerGameMode=None
 NetServerMaxTickRate=30
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_9
+MinimumiOSVersion=IOS_11
+bUseIntegratedKeyboard=True
+bCookASTCTextures=True
+MaxShaderLanguageVersion=3
+bAutomaticSigning=True
+bEnableGameCenterSupport=True
+bEnableCloudKitSupport=True
+bDisableHTTPS=True
+bCookPVRTCTextures=False
+FrameRateLock=PUFRL_60
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AmbientOcclusion=False
@@ -214,5 +223,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
