Continue improving mobile devices support. Tested Integration Server work on dedicated server (Ubuntu) and it's work with PC and mobile devices Docs update

--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -77,6 +77,7 @@ RunIntegrationServerSilently=False
 InfuraURL="https://rinkeby.infura.io"
 IntegrationServerSourceDirectory=G:\[Work]\Etherlinker for UE4\EtherlinkerServer\Stratum
 ContractsToCompileDirectory=G:\[Work]\ContractsToCompile
+DefaultWalletPath=G:/[Work]/EtherlinkerKeys/
 
 [/Script/NavigationSystem.NavigationSystemV1]
 CrowdManagerClass=Class'/Script/AIModule.CrowdManager'
