Geth/Parity support was added for those, who don't want to use Infura Network

--- a/EtherlinkerServer/Stratum/src/main/resources/application.properties
+++ b/EtherlinkerServer/Stratum/src/main/resources/application.properties
@@ -5,6 +5,8 @@ etherlinker.antispam.filter.active = true
 etherlinker.antispam.filter.unblock.interval = 5000
 etherlinker.antispam.filter.block.interval = 200
 etherlinker.check.ue4.agent = false
+etherlinker.use.geth.or.parity = false
+etherlinker.geth.or.parity.url = http://127.0.0.1:8545
 
 server.port = 8451
 server.ssl.key-store = classpath:keystore.p12
