--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -174,6 +174,7 @@ AntVerbosity=Normal
 KeyStore=EtherlinkerKey.keystore
 KeyAlias=EtherlinkerKey
 KeyStorePassword=123456
+bEnableGradle=True
 
 [/Script/Engine.UserInterfaceSettings]
 UIScaleRule=Horizontal
@@ -224,3 +225,5 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
