--- a/EtherlinkerExampleProject/Plugins/Etherlinker/Etherlinker.uplugin
+++ b/EtherlinkerExampleProject/Plugins/Etherlinker/Etherlinker.uplugin
@@ -10,7 +10,7 @@
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
-	"EngineVersion": "4.20.0",
+	"EngineVersion": "4.21.0",
 	"CanContainContent": true,
 	"Installed": true,
 	"Modules": [
@@ -21,9 +21,7 @@
 			"WhitelistPlatforms": [
 				"Win64",
 				"Win32",
-				"Mac",
-				"IOS",
-				"Android"
+				"Mac"
 			]
 		},
 		{
@@ -33,9 +31,7 @@
 			"WhitelistPlatforms": [
 				"Win64",
 				"Win32",
-				"Mac",
-				"IOS",
-				"Android"
+				"Mac"
 			]
 		}
 	]
