Changes, required to submit project to Unreal Marketplace

--- a/EtherlinkerExampleProject/Plugins/Etherlinker/Etherlinker.uplugin
+++ b/EtherlinkerExampleProject/Plugins/Etherlinker/Etherlinker.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "Ruslan Nazirov",
 	"CreatedByURL": "",
 	"DocsURL": "",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e029bbf9d6b04f95b9d9ef52e3934be5"
 	"SupportURL": "",
 	"EngineVersion": "4.22.0",
 	"CanContainContent": true,
