--- a/EtherlinkerExampleProject/EtherlinkerTest.uproject
+++ b/EtherlinkerExampleProject/EtherlinkerTest.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.22",
+	"EngineAssociation": "4.23",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -13,7 +13,8 @@
 	"Plugins": [
 		{
 			"Name": "Etherlinker",
-			"Enabled": true
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e029bbf9d6b04f95b9d9ef52e3934be5"
 		}
 	]
 }
