--- a/EtherlinkerExampleProject/Config/DefaultEngine.ini
+++ b/EtherlinkerExampleProject/Config/DefaultEngine.ini
@@ -78,7 +78,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Etherlinker.EtherlinkerSettings]
 IntegrationServerURL="https://localhost:8451"
 RunIntegrationServerSilently=False
-InfuraURL="https://rinkeby.infura.io"
+InfuraURL="https://rinkeby.infura.io/v3/ENTER_YOUR_INFURA_PROJECT_ID_HERE"
 IntegrationServerSourceDirectory=G:\[Work]\Etherlinker for UE4\EtherlinkerServer\Stratum
 ContractsToCompileDirectory=G:\[Work]\ContractsToCompile
 DefaultWalletPath=G:/[Work]/EtherlinkerKeys/
@@ -230,5 +230,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
 
