--- a/EtherlinkerServer/Stratum/pom.xml
+++ b/EtherlinkerServer/Stratum/pom.xml
@@ -92,13 +92,18 @@
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>core</artifactId>
-            <version>4.5.11</version>
+            <version>4.8.4</version>
         </dependency>
         <dependency>
             <groupId>org.bitcoinj</groupId>
             <artifactId>bitcoinj-core</artifactId>
             <version>0.14.7</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.3.70</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -142,9 +147,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.web3j</groupId>
+                <groupId>io.github.zebraofjustice</groupId>
                 <artifactId>web3j-maven-plugin</artifactId>
-                <version>4.5.11</version>
+                <version>4.8.1.zebraofjustice</version>
                 <configuration>
                     <packageName>com.academy.contracts</packageName>
                     <sourceDestination>src/main/java/</sourceDestination>
