--- a/EtherlinkerServer/Stratum/pom.xml
+++ b/EtherlinkerServer/Stratum/pom.xml
@@ -147,9 +147,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>io.github.zebraofjustice</groupId>
+                <groupId>org.web3j</groupId>
                 <artifactId>web3j-maven-plugin</artifactId>
-                <version>4.8.1.zebraofjustice</version>
+                <version>4.8.2</version>
                 <configuration>
                     <packageName>com.academy.contracts</packageName>
                     <sourceDestination>src/main/java/</sourceDestination>
